<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="dialog_okay">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_default">Default</string>
    
    <string name="menu_home">Home</string>
    <string name="menu_playlist">Playlist</string>
    <string name="menu_album">Album</string>
    <string name="menu_search">Search</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_audio_effect">Audio Effect</string>
    <string name="menu_setting_audio_filter">Audio File</string>
    <string name="menu_setting_audio_play">Audio Play</string>
    <string name="menu_setting_extension_web_server">Web Server</string>
    <string name="menu_webdav">WebDav</string>

    <string name="menu_audio_detail">Audio Detail</string>
    <string name="menu_lyric_view">Lyric View</string>
    
    <string name="main_snack_open_setting_text">Please give permission on reading external storage in system setting</string>
    <string name="main_snack_open_setting_button">Setting</string>
    
    <string name="play_bottom_sheet_queue">Queue</string>
    <string name="play_menu_details">Details</string>
    
    <string name="setting_enable">Enable</string>
    <string name="setting_value">Value</string>

    <string name="setting_audio">Audio</string>
    <string name="setting_audio_title">Audio file</string>
    <string name="setting_audio_filter_size_title">Filter size</string>
    <string name="setting_audio_filter_duration_title">Filter duration</string>
    <string name="setting_play_title">Audio Play</string>
    <string name="setting_play_audio_focus">Audio Focus</string>
    <string name="setting_play_audio_focus_title">Allow other media play in parallel</string>
    <string name="setting_play_fade_title">Play Fading</string>
    <string name="setting_play_fade_in_title">Fade in</string>
    <string name="setting_play_fade_out_title">Fade out</string>

    <!-- SETTING KEY CONSTANT -->
    <string name="key_audio">key_audio</string>
    <string name="key_audio_filter_size_enable">key_audio_filter_size_enable</string>
    <string name="key_audio_filter_size_value">key_audio_filter_size_value</string>
    <string name="key_audio_filter_size_unit">Unit: KiloByte (KiB)</string>
    
    <string name="key_audio_filter_duration_enable">key_audio_filter_duration_enable</string>
    <string name="key_audio_filter_duration_value">key_audio_filter_duration_value</string>
    <string name="key_audio_filter_duration_unit">Unit: Millisecond (ms)</string>
    
    <string name="key_play">key_play</string>
    <string name="key_play_audio_focus_enable">key_play_audio_focus_enable</string>
    <string name="key_play_fade_in_enable">key_play_fade_in_enable</string>
    <string name="key_play_fade_out_enable">key_play_fade_out_enable</string>

    <string name="webservice_notification_title">Web Service</string>

    <string name="audio_detail_basics">Basics</string>
    <string name="audio_detail_title">Title</string>
    <string name="audio_detail_title_key">key_title</string>
    <string name="audio_detail_artist">Artist</string>
    <string name="audio_detail_artist_key">key_artist</string>
    <string name="audio_detail_album">Album</string>
    <string name="audio_detail_album_key">key_album</string>
    <string name="audio_detail_duration">Duration</string>
    <string name="audio_detail_duration_key">key_duration</string>
    <string name="audio_detail_quality">Quality</string>
    <string name="audio_detail_format">Format</string>
    <string name="audio_detail_format_key">key_format</string>
    <string name="audio_detail_bit_rate">Bit Rate</string>
    <string name="audio_detail_bit_rate_key">key_bit_rate</string>
    <string name="audio_detail_sample_rate">Sample Rate</string>
    <string name="audio_detail_sample_rate_key">key_sample_rate</string>
    <string name="audio_detail_bit_depth">Bit Depth</string>
    <string name="audio_detail_bit_depth_key">key_bit_depth</string>
    <string name="audio_detail_lyric">Lyric</string>
    <string name="audio_detail_lyric_import">Import Lyric</string>
    <string name="audio_detail_lyric_import_key">key_lyric_import</string>
    <string name="audio_detail_lyric_import_succeed">Lyric import succeed</string>
    <string name="audio_detail_lyric_import_no_file_selected">No lyric file selected</string>
    <string name="audio_detail_lyric_import_cannot_open_file">Cannot open selected file: </string>
    <string name="audio_detail_lyric_import_incorrect_format">Empty or incorrect lyric format: </string>
    <string name="audio_detail_lyric_view">View Lyric</string>
    <string name="audio_detail_lyric_view_key">key_lyric_view</string>
    <string name="audio_detail_lyric_remove">Remove Lyric</string>
    <string name="audio_detail_lyric_remove_key">key_lyric_remove</string>
    <string name="audio_detail_lyric_remove_removed">Lyric removed</string>
    <string name="audio_detail_lyric_remove_dialog_title">Remove imported lyric</string>
    <string name="audio_detail_lyric_remove_dialog_content">Confirm?</string>
    <string name="audio_detail_lyric_remove_dialog_confirm">Confirm</string>
    <string name="audio_detail_lyric_remove_dialog_cancel">Cancel</string>
    <string name="audio_detail_file">File</string>
    <string name="audio_detail_size">Size</string>
    <string name="audio_detail_size_key">key_size</string>
    <string name="audio_detail_path">Path</string>
    <string name="audio_detail_path_key">key_path</string>
    <string name="audio_detail_image_loading">Loading…</string>
    <string name="audio_detail_image_loading_canceled">Selection canceled</string>
    <string name="audio_detail_image_loading_failed">Fail to load image</string>
    <string name="audio_detail_image_loading_succeed">Succeed</string>

    <string name="audio_detail_select_fetch_default">Default</string>
    <string name="audio_detail_select_fetch_storage">Storage</string>
    <string name="audio_detail_select_fetch_net_ease">NetEase Music</string>
    <string name="audio_detail_select_fetch_qq_music">QQMusic</string>
    <string name="audio_detail_select_fetch_hint">Paste music ID or share link</string>
    <string name="audio_detail_select_fetch_title">Import from…</string>
    <string name="audio_detail_menu_import">Import Cover and Lyric…</string>

    <string name="lyric_edit_dialog_add">Add lyric</string>
    <string name="lyric_edit_dialog_modify">Modify lyric</string>
    <string name="lyric_edit_dialog_min">Min</string>
    <string name="lyric_edit_dialog_sec">Sec</string>
    <string name="lyric_edit_dialog_ms">Mils</string>
    <string name="lyric_edit_dialog_lyric">Lyric</string>
    <string name="lyric_edit_dialog_remove">Remove</string>

    <string name="lyric_edit_add">Add lyric…</string>
    <string name="lyric_edit_save">Save</string>
    <string name="lyric_edit_cancel">@android:string/cancel</string>

    <string name="extension_title">Extension</string>
    <string name="web_server_title">Web Server</string>
    <string name="key_web_server">key_web_server</string>
    <string name="web_server_enable">Enable Web Server</string>
    <string name="key_web_server_enable">key_web_server_enable</string>
    <string name="web_server_disconnect_enable">Stop when Wi-Fi disconnected</string>
    <string name="key_web_server_disconnect_enable">key_web_server_disconnect_enable</string>
    <string name="web_server_port">Server Port</string>
    <string name="key_web_server_port">key_web_server_port</string>
    <string name="web_server_port_range">Port should be in range 1025 to 65535</string>

    <string name="nav_audio_effect">Audio Effect</string>
    <string name="loudness_enhancer_title">Loudness Enhance</string>
    <string name="loudness_enhancer_enable_key">key_loudness_enhancer_enable</string>
    <string name="loudness_enhancer_gain_key">key_loudness_enhancer</string>

    <string name="equalizer_title">Equalizer</string>
    <string name="key_equalizer_enable">key_equalizer_enable</string>
    <string name="key_equalizer_band_level">key_equalizer_band_level</string>

    <string name="visualizer_permission_not_gained">Permissions not granted.\n Click white space above Loudness Enhancer to gain again.</string>

    <string name="other_title">Other</string>
    <string name="key_other_battery_optimization">key_battery_optimization</string>
    <string name="other_battery_optimization_title">Disable Battery Optimization</string>
    <string name="other_battery_optimization_summary">When this option is enabled, there is a need of disabling battery optimization policy by Android OS.</string>
    <string name="key_other_codec">key_codec</string>
    <string name="other_codec_title">Codec Information</string>
    <string name="codec_type">Codec Type</string>
    <string name="codec_type_encoder">Encoder</string>
    <string name="codec_type_decoder">Decoder</string>
    <string name="codec_supported_method">Supported Method</string>
    <string name="codec_supported_method_software">Software Codec</string>
    <string name="codec_supported_method_hardware">Hardware Codec</string>
    <string name="codec_hardware_acceleration">Hardware Acceleration</string>
    <string name="codec_require_sdk_29">This Property Require SDK 29</string>
    <string name="codec_hardware_acceleration_supported">Supported</string>
    <string name="codec_hardware_acceleration_not_supported">Not Supported</string>
    <string name="codec_vendor">Vendor</string>
    <string name="codec_vendor_android">Android Platform</string>
    <string name="codec_vendor_vendor">Device Manufacturer</string>
    <string name="codec_supported_mime">Supported MIME</string>

    <string name="web_dav_name">Host Name</string>
    <string name="web_dav_url">WebDav URL</string>
    <string name="web_dav_username">Username</string>
    <string name="web_dav_password">Password</string>
    <string name="web_dav_connect">Connect</string>
    <string name="web_dav_add">Add WebDav host</string>
    <string name="web_dav_dialog_add">Add</string>
    <string name="web_dav_dialog_cancel">@android:string/cancel</string>
    <string name="web_dav_dialog_remove">Remove</string>
    <string name="web_dav_download_title">Downloading…</string>
    <string name="web_dav_download_from">From</string>
    <string name="web_dav_download_to">To</string>

    <string name="playlist_add">Add</string>
    <string name="playlist_menu_edit">Edit Playlist Detail…</string>
    <string name="playlist_menu_edit_title">Title</string>
    <string name="playlist_menu_edit_description">Description</string>
    <string name="add_playlist_title">Add Playlist…</string>
    <string name="add_playlist_ok">@android:string/ok</string>
    <string name="add_playlist_cancel">@android:string/cancel</string>
    <string name="add_playlist_content_title">Title</string>
    <string name="add_playlist_content_description">Description</string>
    <string name="playlist_content_play_randomly">Play Randomly</string>

    <string name="home_option_menu_audio_detail">Detail</string>
    <string name="home_option_menu_add_to_playlist">Add to Playlist…</string>

    <string name="add_to_playlist_title">Add to Playlist…</string>
    <string name="add_to_playlist_cancel">@android:string/cancel</string>

    <string name="text_input_positive">@android:string/ok</string>
    <string name="text_input_negative">@android:string/cancel</string>
    <string name="text_input_default">Remove Image</string>

</resources>