<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/setting_audio"
        app:iconSpaceReserved="false">

        <Preference
            android:key="@string/key_audio"
            android:title="@string/setting_audio_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="@string/key_play"
            android:title="@string/setting_play_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/extension_title"
        app:iconSpaceReserved="false">

        <Preference
            android:key="@string/key_web_server"
            android:title="@string/web_server_title"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other_title"
        app:iconSpaceReserved="false">

        <Preference
            android:key="@string/key_other_battery_optimization"
            android:summary="@string/other_battery_optimization_summary"
            android:title="@string/other_battery_optimization_title"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>