<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <PreferenceCategory
        android:title="@string/setting_audio_filter_size_title"
        app:iconSpaceReserved="false" >
        
        <SwitchPreferenceCompat
            android:key="@string/key_audio_filter_size_enable"
            android:title="@string/setting_enable"
            app:iconSpaceReserved="false" />
        
        <Preference
            android:key="@string/key_audio_filter_size_value"
            android:title="@string/setting_value"
            android:summary="@string/key_audio_filter_size_unit"
            app:iconSpaceReserved="false" />
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/setting_audio_filter_duration_title"
        app:iconSpaceReserved="false" >
        
        <SwitchPreferenceCompat
            android:key="@string/key_audio_filter_duration_enable"
            android:title="@string/setting_enable"
            app:iconSpaceReserved="false" />
        
        <Preference
            android:key="@string/key_audio_filter_duration_value"
            android:title="@string/setting_value"
            android:summary="@string/key_audio_filter_duration_unit"
            app:iconSpaceReserved="false" />
    
    </PreferenceCategory>

</PreferenceScreen>