<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/setting_play_fade_title"
        app:iconSpaceReserved="false" >
        <CheckBoxPreference
            android:title="@string/setting_play_fade_in_title"
            android:key="@string/key_play_fade_in_enable"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:title="@string/setting_play_fade_out_title"
            android:key="@string/key_play_fade_out_enable"
            android:defaultValue="false"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>